--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meanio-system",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "System package for MEAN.io starter bundle",
   "author": {
     "name": "Linnovate"
@@ -15,6 +15,7 @@
     "npm": "3.x"
   },
   "dependencies": {
+    "meanio-circles": "^0.1.x",
     "serve-favicon": "latest"
   },
   "license": "MIT"
